# devoir_4_lenoir_dong

./: README.md  aimantation_erreur.txt  aimantation_moyenne.txt  aimantation_tau.txt  energie_erreur.txt  energie_moyenne.txt  energie_tau.txt  ising.py  monte_carlo.py  pyproject.toml
